Styling, reduce text

--- a/labeling_app/static/css/global.css
+++ b/labeling_app/static/css/global.css
@@ -116,3 +116,44 @@ p[class^="from-"].emoji::before {
 .margin-t_one {
     margin-top: 1rem !important;
 }
+
+/* Credit: https://www.w3schools.com/csS/css3_buttons.asp */
+.weiter-button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #348ee9;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px;
+    padding: 20px;
+    width: 160px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.weiter-button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.weiter-button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.weiter-button:hover span {
+    padding-right: 25px;
+}
+
+.weiter-button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
