--- a/labeling_app/templates/labeling_app/login.html
+++ b/labeling_app/templates/labeling_app/login.html
@@ -5,10 +5,16 @@
 </head>
 
 <body>
-    <p>Bitte gib (d)einen Namen an. Dieser dient dazu, dass dir Nachrichten nicht mehrmals angezeigt werden.</p>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Weiter</button>
+        <button type="submit" class="weiter-button"><span>Weiter </span></button>
     </form>
 </body>
+
+<style lang="css">
+    input {
+        width: 100%;
+        font-size: 28px;
+    }
+</style>
