--- a/labeling_app/templates/labeling_app/label.html
+++ b/labeling_app/templates/labeling_app/label.html
@@ -28,7 +28,7 @@
             {{ form.as_p }}
             <input type="hidden" name="message_id" value="{{ message.id }}">
             <input type="hidden" name="user_id" value="{{ user.id }}">
-            <button type="submit" class="weiter-button" style="vertical-align:middle"><span>Weiter </span></button>
+            <button type="submit" class="weiter-button"><span>Weiter </span></button>
         </form>
     </div>
 </body>
