--- a/labeling_app/templates/labeling_app/confirm_name.html
+++ b/labeling_app/templates/labeling_app/confirm_name.html
@@ -6,5 +6,5 @@
 
 <body>
     <p>Ein Nutzer mit dem angegebenen Namen existiert bereits.</p>
-    <p>Hast du dich schon einmal mit diesem Namen eingeloggt? Dann klicke einfach auf <a href="labeling">Weiter</a>. Ansonsten klicke bitte auf <a href="logout">Logout</a> und wähle einen anderen Namen.</p>
+    <p>Hast du dich schon einmal mit diesem Namen eingeloggt? Dann klicke einfach auf <a href="label">Weiter</a>. Ansonsten klicke bitte auf <a href="logout">Logout</a> und wähle einen anderen Namen.</p>
 </body>
