Add text, comment line breaks

--- a/labeling_app/templates/labeling_app/warning.html
+++ b/labeling_app/templates/labeling_app/warning.html
@@ -2,14 +2,26 @@
     <meta charset="utf-8">
     <title>Hinweis</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/global.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
 </head>
 
 <body>
     <div>
         <h2>⚠️ Hinweis</h2>
-        <p>Die im Folgenden gezeigten Nachrichten sind oft unglaublicher Schwachsinn, zum Teil hetzerisch und von jeder Realität abgekoppelt. Wenn man nicht aufpasst kann man sich von ihnen ganz schön die Stimmung vermiesen lassen. Falls du gerade mental in keiner guten Verfassung bist, dann komm vielleicht später wieder.</p>
-        <p>Es kann helfen diese Nachrichten nicht als wahrhaftig festgehaltene Überzeugungen zu lesen, sondern als Musterbeispiele in der Manipulation von Menschen. Wenngleich sie zerstörerisch sind, so kann man sie doch gleichzeitig als Ausdruck von Kreativität anerkennen, als eine Form des Geschichtenerzählens. Es lässt sich auch durchaus etwas aus diesen Nachrichten lernen. Nicht was ihre inhaltliche Substanz angeht, sondern das Ansprechen menschlicher Gefühle wie Angst und Wut. Sie zeigen auf an welchen Stellen gesellschaftliche Bruchlinien verlaufen, die sich gezielt ausnutzen lassen und sie lassen sich analysieren, in Hinblick darauf welche tieferliegenden Sorgen und Ressentiments die Menschen umtreiben, welche diese Inhalte konsumieren. Wenn du die folgenden Nachrichten aus einer solchen Perspektive des Interesses und mit einer gewissen Losgelöstheit betrachtest, dann vermeidest du dich emotional zu sehr von ihnen vereinnahmen zu lassen.</p>
+        <p>Die im Folgenden gezeigten Nachrichten sind absoluter Schwachsinn, zum Teil hetzerisch und von jeder Realität
+            abgekoppelt. Wenn man nicht aufpasst kann man sich von ihnen ganz schön die Stimmung vermiesen lassen. Falls
+            du gerade mental in keiner guten Verfassung bist, dann komm vielleicht später wieder.</p>
+        <p>Es kann helfen diese Nachrichten nicht als wahrhaftige Überzeugungen der Menschen die sie verfasst haben zu
+            betrachten, sondern als Musterbeispiele in der Manipulation von Menschen. Wenngleich sie zerstörerisch sind,
+            so kann man sie doch gleichzeitig als Ausdruck von Kreativität anerkennen, als eine furchtbare Form des
+            Geschichtenerzählens. Es lässt sich auch durchaus etwas aus diesen Nachrichten lernen. Nicht was ihre
+            inhaltliche Substanz angeht, sondern das Ansprechen menschlicher Gefühle wie Angst und Wut. Sie zeigen auf
+            an welchen Stellen gesellschaftliche Bruchlinien verlaufen, die sich gezielt ausnutzen lassen und sie lassen
+            sich analysieren, in Hinblick darauf welche tieferliegenden Sorgen und Ressentiments die Menschen umtreiben,
+            welche diese Inhalte konsumieren. Wenn du die folgenden Nachrichten aus einem solchen analytischen Blick und
+            einer gewissen emotionalen Losgelöstheit betrachtest, dann vermeidest du dich zu sehr von ihnen vereinnahmen
+            zu lassen.</p>
+        <p>Also gib auf dich Acht und nimm diesen wie am Fließband produzierten Schwachsinn nicht zu ernst 😉</p>
         <a href="label">Alles klar</a><br><br>
     </div>
 </body>
