Reorder list item

--- a/labeling_app/templates/labeling_app/facts.html
+++ b/labeling_app/templates/labeling_app/facts.html
@@ -25,13 +25,6 @@
 
     <p>
         <a
-            href="https://correctiv.org/faktencheck/2021/11/30/irrefuehrende-behauptungen-ueber-gemeldete-nebenwirkungen-nach-covid-19-impfungen-in-der-vigibase-datenbank-der-who/">
-            🤒 Unverhältnismäßige Nebenwirkungen
-        </a>
-    </p>
-
-    <p>
-        <a
             href="https://correctiv.org/faktencheck/hintergrund/2021/12/03/covid-19-impfstoffe-langzeitfolgen-spaetfolgen-sehr-unwahrscheinlich/">
             ⌚ Langzeitfolgen unklar
         </a>
@@ -116,6 +109,12 @@
         <a
             href="https://correctiv.org/faktencheck/2022/01/21/nein-ein-fachartikel-beweist-nicht-dass-auffrischungsimpfungen-das-krebswachstum-beschleunigen/">
             🦀 Verursachen Krebs
+        </a>
+    </p>
+    <p>
+        <a
+            href="https://correctiv.org/faktencheck/2021/11/30/irrefuehrende-behauptungen-ueber-gemeldete-nebenwirkungen-nach-covid-19-impfungen-in-der-vigibase-datenbank-der-who/">
+            🤒 Nebenwirkungen (andere)
         </a>
     </p>
 </body>
