Add login explanation

--- a/labeling_app/templates/labeling_app/login.html
+++ b/labeling_app/templates/labeling_app/login.html
@@ -1,7 +1,7 @@
 <head>
     <title>Login</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/global.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
 </head>
 
 <body>
@@ -10,6 +10,8 @@
         {{ form.as_p }}
         <button type="submit" class="weiter-button"><span>Weiter </span></button>
     </form>
+    <p>*dieser dient dazu sich zu merken, welche Nachrichten du bereits gelabelt hast, damit sie dir nicht erneut
+        angezeigt werden.</p>
 </body>
 
 <style lang="css">
