--- a/labeling_app/templates/labeling_app/warning.html
+++ b/labeling_app/templates/labeling_app/warning.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h2>⚠️ Hinweis</h2>
-        <p>Die im Folgenden gezeigten Nachrichten zu einem großen Teil hetzerisch und von jeder Realität
+        <p>Die im Folgenden gezeigten Nachrichten zum Teil hetzerisch und von jeder Realität
             abgekoppelt. Wenn man nicht aufpasst kann man sich von ihnen ganz schön die Stimmung vermiesen lassen. Falls
             du gerade mental in keiner guten Verfassung bist, dann komm vielleicht später wieder.</p>
         <p>Es kann helfen diese Nachrichten nicht als wahrhaftige Überzeugungen der Menschen die sie verfasst haben zu
