Add separate introduction page, some text changes

--- a/labeling_app/templates/labeling_app/label.html
+++ b/labeling_app/templates/labeling_app/label.html
@@ -21,7 +21,8 @@
           <br><br>Wähle die Zuordnung nicht bloß auf Basis dessen was die Nachricht explizit sagt, sondern auch dessen
           was sie andeutet oder impliziert.
           <br><br>Falls du dir unsicher bist: Überlege dir wie eine faktenbasierte Widerlegung der unten genannten
-          Falschinformation aussehen könnte. Wäre diese auch passend, um die oben stehende Nachricht zu entkräften?
+          Falschinformation aussehen könnte. Wäre diese auch passend, um die oben stehende Nachricht (in Teilen) zu
+          entkräften?
         </span>
       </span> (möglicherweise keine) und drücke dann auf Weiter.<br>
       Wenn du eine andere Nachricht angezeigt bekommen willst, dann lade einfach die Seite neu.
