--- a/labeling_app/templates/labeling_app/warning.html
+++ b/labeling_app/templates/labeling_app/warning.html
@@ -8,17 +8,16 @@
 <body>
     <div>
         <h2>⚠️ Hinweis</h2>
-        <p>Die im Folgenden gezeigten Nachrichten zum Teil hetzerisch und von jeder Realität
+        <p>Die im Folgenden gezeigten Nachrichten sind zum Teil hetzerisch und von jeder Realität
             abgekoppelt. Wenn man nicht aufpasst kann man sich von ihnen ganz schön die Stimmung vermiesen lassen. Falls
             du gerade mental in keiner guten Verfassung bist, dann komm vielleicht später wieder.</p>
-        <p>Es kann helfen diese Nachrichten nicht als wahrhaftige Überzeugungen der Menschen die sie verfasst haben zu
-            betrachten, sondern als Musterbeispiele in der Manipulation von Menschen. Es lässt sich durchaus etwas aus
-            diesen Nachrichten lernen. Nicht was ihre inhaltliche Substanz angeht, sondern das Ansprechen menschlicher
-            Gefühle wie Angst und Wut. Sie zeigen auf an welchen Stellen gesellschaftliche Bruchlinien verlaufen, die
-            sich gezielt ausnutzen lassen und sie lassen sich analysieren, in Hinblick darauf welche tieferliegenden
-            Sorgen und Ressentiments die Menschen umtreiben, welche diese Inhalte konsumieren. Wenn du die folgenden
-            Nachrichten mit einem solchen analytischen Blick und einer gewissen emotionalen Losgelöstheit betrachtest,
-            dann vermeidest du dich zu sehr von ihnen vereinnahmen zu lassen.</p>
+        <p>Mir hilft es diese Nachrichten nicht als wahrhaftige Überzeugungen zu betrachten, sondern als Musterbeispiele
+            für die Manipulation von Menschen. Es lässt sich durchaus etwas aus ihnen lernen. Nicht was die inhaltliche
+            Substanz angeht, sondern das Ansprechen menschlicher Gefühle wie Angst und Wut. Sie lassen sich auch
+            daraufhin analysieren welche tieferliegenden Sorgen und Ressentiments die Menschen umtreiben, welche diese
+            Inhalte konsumieren. Durch einen solchen bewussten, analytischen Blick lässt du dich emotional weniger von
+            ihnen beeinflussen.
+        </p>
         <p>Also achte auf dein geistiges Wohlbefinden und nimm diesen wie am Fließband produzierten Schwachsinn nicht zu
             ernst 😉</p>
         <a href="label">Alles klar</a><br><br>
