--- a/labeling_app/templates/labeling_app/warning.html
+++ b/labeling_app/templates/labeling_app/warning.html
@@ -11,15 +11,14 @@
         <p>Die im Folgenden gezeigten Nachrichten sind zum Teil hetzerisch und von jeder Realität
             abgekoppelt. Wenn man nicht aufpasst kann man sich von ihnen ganz schön die Stimmung vermiesen lassen. Falls
             du gerade mental in keiner guten Verfassung bist, dann komm vielleicht später wieder.</p>
-        <p>Mir hilft es diese Nachrichten nicht als wahrhaftige Überzeugungen zu betrachten, sondern als Musterbeispiele
-            für die Manipulation von Menschen. Es lässt sich durchaus etwas aus ihnen lernen. Nicht was die inhaltliche
-            Substanz angeht, sondern das Ansprechen menschlicher Gefühle wie Angst und Wut. Sie lassen sich auch
-            daraufhin analysieren welche tieferliegenden Sorgen und Ressentiments die Menschen umtreiben, welche diese
-            Inhalte konsumieren. Durch einen solchen bewussten, analytischen Blick lässt du dich emotional weniger von
-            ihnen beeinflussen.
+        <p>Es lässt sich durchaus etwas aus den Nachrichten lernen. Nicht was ihre inhaltliche Substanz angeht, aber
+            sie zeigen wie sich Gefühle wie Angst und Wut sehr effektiv ansprechen lassen. Sie geben auch einen
+            Einblick in die Welt der Menschen, die in diesen Kanälen unterwegs sind. Bei genauer Betrachtung können sie
+            einen Eindruck vermitteln welche tieferliegenden Sorgen und Ressentiments diese Menschen umtreiben. Ein
+            solcher bewusster und analytischer Blick kann helfen sich nicht so sehr von diesem Quatsch vereinnahmen zu
+            lassen.
         </p>
-        <p>Also achte auf dein geistiges Wohlbefinden und nimm diesen wie am Fließband produzierten Schwachsinn nicht zu
-            ernst 😉</p>
+        <p>Also achte auf dein geistiges Wohlbefinden und nimm diesen geschwurbelten Schwachsinn nicht zu ernst 😉</p>
         <a href="label">Alles klar</a><br><br>
     </div>
 </body>
